--- a/src/assets/sass/common.scss
+++ b/src/assets/sass/common.scss
@@ -1,1 +1,54 @@
 @use './variables/commonVariables' as vars;
+
+.eco-mio-score {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #22c55e;
+  color: white;
+  position: relative;
+  font-weight: bold;
+  line-height: 1;
+  cursor: help;
+
+  &:hover:before {
+    content: attr(data-tooltip);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    font-size: 14px;
+    padding: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: calc(100% + 5px);
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    z-index: 1;
+  }
+
+  .score-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
+    font-size: 24px;
+  }
+}
+
+.skyscanner.eco-mio-score {
+  border-radius: 7px;
+  padding: 4px 7px;
+  margin-left: 5px;
+  font-size: 14px;
+}
+
+.kayak.eco-mio-score {
+  border-radius: 10px;
+  padding: 4px 7px;
+  margin-left: 5px;
+  font-size: 18px;
+
+  .score-icon {
+    transform: scale(1.5);
+  }
+}
